manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game-2048
  namespace: game-2048
spec:
  replicas: 2
  selector:
    matchLabels:
      app: game-2048
  template:
    metadata:
      labels:
        app: game-2048
    spec:
      containers:
      - name: game-2048
        image: public.ecr.aws/kubernetes-sigs/aws-load-balancer-controller/2048-game:v1.0.0
        ports:
        - containerPort: 80
